fixed li linking issues for offerings.html page by moving the .menu so there was no overlap

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -226,7 +226,7 @@ ul#toc li.current a {
 	padding: 1em;
 	margin-top:14px;
 	width: 750px;
-	
+	margin-left:200px;
 
 
 =======
